syntax = "proto3";

package good.middleware.app.good1.poster.v1;

option go_package = "github.com/NpoolPlatform/message/good/middleware/v1/app/good/poster";

import "basetypes/v1/conds.proto";
import "basetypes/good/v1/enums.proto";

message PosterReq {
    optional uint32 ID = 10;
    optional string EntID = 20;
    optional string AppGoodID = 30;
    optional string Poster = 40;
    optional uint32 Index = 50;
}

message Poster {
    // @inject_tag: sql:"id"
    uint32 ID = 10;
    // @inject_tag: sql:"ent_id"
    string EntID = 20;
    // @inject_tag: sql:"app_id"
    string AppID = 30;
    // @inject_tag: sql:"good_id"
    string GoodID = 40;
    // @inject_tag: sql:"good_name"
    string GoodName = 50;
    // @inject_tag: sql:"app_good_id"
    string AppGoodID = 60;
    // @inject_tag: sql:"app_good_name"
    string AppGoodName = 70;
    // @inject_tag: sql:"poster"
    string Poster = 80;
    // @inject_tag: sql:"good_type"
    string GoodTypeStr = 90;
    basetypes.good.v1.GoodType GoodType = 100;
    // @inject_tag: sql:"index"
    uint32 Index = 110;
    // @inject_tag: sql:"created_at"
    uint32 CreatedAt = 1000;
    // @inject_tag: sql:"updated_at"
    uint32 UpdatedAt = 1010;
}

message PosterInfo {
    // @inject_tag: sql:"app_good_id"
    string AppGoodID = 10;
    // @inject_tag: sql:"poster"
    string Poster = 20;
    // @inject_tag: sql:"index"
    uint32 Index = 30;
}

message Conds {
    optional basetypes.v1.Uint32Val ID = 10;
    optional basetypes.v1.StringVal EntID = 20;
    optional basetypes.v1.StringVal AppID = 30;
    optional basetypes.v1.StringVal GoodID = 40;
    optional basetypes.v1.StringSliceVal GoodIDs = 50;
    optional basetypes.v1.StringVal AppGoodID = 60;
    optional basetypes.v1.StringSliceVal AppGoodIDs = 70;
}

